fixing sidebar overlap closes #258

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -168,7 +168,7 @@ color: #666;  }
 
 #collection-list-nav {
     width:100%;
-    height:6.75em;
+    height:8.25em;
     list-style-type: none;
     font-family: "AvenirNextLTW01-Medium";
     clear:both;
@@ -187,7 +187,6 @@ color: #666;  }
     width:7.68em;
     margin:0 1.75em 0 0;
 }
-
 
 #collection-list-nav dl:nth-child(4), 
     .reference-group dl:nth-child(4),
@@ -424,10 +423,6 @@ a:active, a:hover, #reference a:hover {
     transition: border-bottom 30ms linear; 
 }
 
-a.nounderline:hover {
-    border: none;
-}
-
 .anchor {
     color: #222 !important;
 }
@@ -563,6 +558,9 @@ li {
     margin: 0 0 1em 0;
 }
 
+.image-row img {
+    width:48%;
+}
 
 .image-row img+img {
     float:right;
@@ -584,23 +582,6 @@ p+img {
 .video {
     width:100%;
     border-color:rgba(51,51,51,.5);
-}
-
-#menu {
-    list-style: none;
-    font-family: "AvenirNextLTW01-Medium";
-    height: 100%;
-    padding:1em 0; 
-    z-index: -2;
-}
-
-#menu li { 
-    float:left;
-    margin-right: 1em;
-}
-
-#menu li:last-child { 
-
 }
 
 
@@ -802,15 +783,18 @@ footer {
     }
 
     #menu {
-    margin:4.25em 0.75em 0 -1.85em; /* margin-right: 0.75em;  */
+    list-style: none;
+    font-family: "AvenirNextLTW01-Medium";
+    margin:0 0.75em 0 -1.85em; /* margin-right: 0.75em;  */
     width:7.3em;
-    height:4.5em;
+    height:100%;
     float:left;
     border-top: transparent;
     border-bottom: transparent;
     height: 14.25em;
-    padding:1em 0; 
+    padding:5.25em 0; 
     font-size: 0.92em;
+    z-index: 100;
     }
 
     #menu li {
@@ -822,6 +806,7 @@ footer {
     #menu li:last-child {
     /*    margin: 0;*/
     }
+
 
     #menu .other-link::after {
         /* content:"\2192"; 
